--- a/index.html
+++ b/index.html
@@ -46,8 +46,79 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="container-fluid">
+            <div id="mainslider" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#mainslider" data-slide-to="0" class="active"><li>
+                    <li data-target="#mainslider" data-slide-to="1"></li>
+                    <li data-target="#mainslider" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/banner1.png" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Quer Criar um e-commerce?</h2>
+                            <p>Conte conosco temos mais de 30 lojas no portfólio.</p>
+                            <a href="#" class="main-btn">Ver Portfólio</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/banner2.png" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Está querendo tirar projeto do Papel</h2>
+                            <p>Nossa equipe está pronto para lhe atender.</p>
+                            <a href="#" class="main-btn">Entre em Contato</a>
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/banner3.png" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Está buscando manutenção no software</h2>
+                            <p>A empresa conta com uma equipe altamente qualificada para resolver seus problemas.</p>
+                            <a href="#" class="main-btn">Entre em Contato</a>
+                        </div>
+                    </div>
+                </div> <!--fim/inner-->
+                <a href="#mainslider" class="carousel-control-prev" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a href="#mainslider" class="carousel-control-next" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div> <!--slider-->
 
-
+            <div id="about-area">
+                <div class="container">
+                    <div class="row">
+                      <div class="col-12"> 
+                        <h3 class="main-title">Sobre a hDC Agency</h3>
+                      </div>
+                      <div class="col-md-6">
+                        <img class="img-fluid" src="img/agencia.jpg" alt="Agência hDC">
+                      </div>
+                      <div class="col-md-6">
+                        <h3 class="about-title">Uma agência que pensa no futuro</h3>
+                        <p>Nossos projetos são adaptados ao cliente e seu propósito.</p>
+                        <p>Após a especificação do projetos os arquitetos de software definirão as melhores tecnologias para seu projeto.</p>
+                        <p>E nossos designers trabalharão na sua interface/layout para impulsionar o negócio.</p>
+                        <p>Veja outros diferenciais:</p>
+                        <ul id="about-list">
+                          <li><i class="fas fa-check"></i> Utilização de Machine Learning / AI</li>
+                          <li><i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
+                          <li><i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
+                          <li><i class="fas fa-check"></i> Sistema de pagamento próprio</li>
+                          <li><i class="fas fa-check"></i> Desenvolvimento com metodologia ágil</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+              </div> <!--fim/about/area-->
+        </div> <!--fim/fluid-->
+    </main> <!--fim/main-->
     <Script src="js/scripts.js"></Script>
 
 
