--- a/index.html
+++ b/index.html
@@ -117,7 +117,119 @@
                     </div>
                   </div>
               </div> <!--fim/about/area-->
-        </div> <!--fim/fluid-->
+
+              <!-- Serviços da empresa -->
+      <div id="services-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+                <h3 class="main-title">Nossas especialidades</h3>
+            </div>
+            <div class="col-md-4 service-box">
+              <i class="fas fa-mobile-alt"></i>
+              <h4>Aplicativos Nativos</h4>
+              <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos.</p>
+            </div>
+            <div class="col-md-4 service-box">
+              <i class="fas fa-shopping-cart"></i>
+              <h4>E-commerces</h4>
+              <p>Temos uma plataforma própria de e-commerce que se adapta a qualquer regra de negócio (B2C e B2B).</p>
+            </div>
+            <div class="col-md-4 service-box">
+              <i class="fas fa-paint-brush"></i>
+              <h4>Design Criativo</h4>
+              <p>Nossos designers são especializados em UI/UX e também possuem vasta experiência no mercado de software.</p>
+            </div>
+            <div class="col-md-4 service-box">
+              <i class="fab fa-google"></i>
+              <h4>Experts em SEO</h4>
+              <p>Com nosso serviço de marketing seu site será melhor posicionado no Google e venderá mais.</p>
+            </div>
+            <div class="col-md-4 service-box">
+              <i class="fas fa-hands-helping"></i>
+              <h4>Suporte 24/7</h4>
+              <p>Você sempre terá alguem da equipe disponível para suporte, em diferentes plataformas. (chat, email, skype)</p>
+            </div>
+            <div class="col-md-4 service-box">
+              <i class="fas fa-server"></i>
+              <h4>Experiência em servidores</h4>
+              <p>Garantimos uptime e também rápido tempo de resposta do seu site para o seu cliente.</p>
+            </div>
+          </div>
+        </div>
+      </div> <!--fim/especialidades-->
+
+      <!-- Dados da empresa -->
+      <div id="data-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleA"></div>
+              <p>Projetos entregues</p>
+            </div>
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleB"></div>
+              <p>Clientes Felizes</p>
+            </div>
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleC"></div>
+              <p>Colaboradores</p>
+            </div>  
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleD"></div>
+              <p>Cafézinhos</p>
+            </div>
+          </div>
+        </div>
+      </div> <!--fim/dados/empresa-->
+
+      <!-- Time -->
+      <div id="team-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="main-title">Nosso time</h3>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="img/profile1.jpg" class="card-img-top" alt="Imagem de Perfil 1">
+                <div class="card-body">
+                  <h5 class="card-title">Jhon Doe</h5>
+                  <p class="card-text">Software Developer</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="img/profile2.jpg" class="card-img-top" alt="Imagem de Perfil 2">
+                <div class="card-body">
+                  <h5 class="card-title">Maria Mariana</h5>
+                  <p class="card-text">SEO Consultant</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="img/profile3.jpg" class="card-img-top" alt="Imagem de Perfil 3">
+                <div class="card-body">
+                  <h5 class="card-title">Paul Baker</h5>
+                  <p class="card-text">Project Manager</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="img/profile4.jpg" class="card-img-top" alt="Imagem de Perfil 4">
+                <div class="card-body">
+                  <h5 class="card-title">Karina Katarina</h5>
+                  <p class="card-text">UX/UI Designer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> <!--fim/time-->
+    </div> <!--fim/fluid-->
     </main> <!--fim/main-->
     <Script src="js/scripts.js"></Script>
 
@@ -133,11 +245,6 @@
 
 
     
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    
 </body>
 </html>
