--- a/index.html
+++ b/index.html
@@ -314,11 +314,14 @@
                 <label for="email">Digite o e-amail</label>
                 <input type="text" class="form-control" placeholder="E-mail" name="email" id="email">
                 <label for="assunto">Digite o Assunto</label>
-                <input type="text" class="form-control" placeholder="Assunto" name="subject" id="assunto">
+                <input type="text" class="form-control" placeholder="Assunto" name="assunto" id="assunto">
+                <!--<label for="mensagem">Digite a mensagem</label>
+                <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message" id="mensagem"></textarea>-->
                 <label for="mensagem">Digite a mensagem</label>
-                <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message" id="mensagem"></textarea>
+                <input type="text" class="form-control" placeholder="Mensagem" name="mensagem" id="mensagem">
                 <button type="submit" class="main-btn">
               </form>
+
             </div>
           </div>
       </div>
