--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <p>Ou nos deixe uma mensagem:</p>
             </div>
             <div class="col-md-6" id="contact-form">
-              <form action="" id="myForm">
+              <form  id="myForm">
                 <label for="email">Digite o e-amail</label>
                 <input type="text" class="form-control" placeholder="E-mail" name="email" id="email">
                 <label for="assunto">Digite o Assunto</label>
@@ -318,8 +318,8 @@
                 <!--<label for="mensagem">Digite a mensagem</label>
                 <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message" id="mensagem"></textarea>-->
                 <label for="mensagem">Digite a mensagem</label>
-                <input type="text" class="form-control" placeholder="Mensagem" name="mensagem" id="mensagem">
-                <button type="submit" class="main-btn">
+                <input type="text" class="form-control" placeholder="mensagem" name="mensagem" id="mensagem">
+                <button type="submit">Gravar</button>
               </form>
 
             </div>
